Tue Mar 30 01:11:39 BST 2004  Olly Betts <olly@survex.com>

	* .cvsignore,Makefile.am,msearch.cc,quest.cc: Replaced the rather
	  peculiar msearch with quest - a simpler command line search program
	  which use Xapian::QueryParser.

Thu Mar 18 23:14:04 GMT 2004  Olly Betts <olly@survex.com>

	* simpleindex.cc: We were ignoring the last paragraph if it had no
	  trailing \n - fixed (bug#24).

Fri Aug 08 01:39:21 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Version 0.7.3.

Fri Aug 01 15:37:40 BST 2003  Olly Betts <olly@survex.com>

	* msearch.cc: Quick fix to get mingw building going.

Wed Jul 30 19:09:00 BST 2003  Olly Betts <olly@survex.com>

	* getopt.h: Copied over latest getopt.h from xapian-core.
	* Makefile.am: Reverse change which linked delve with getopt1.c - it's
	  no longer needed.

Sun Jul 27 17:16:48 BST 2003  Olly Betts <olly@survex.com>

	* Makefile.am: delve now needs getopt1.c thanks to our C++ tweaks to
	  getopt.h.

Sun Jul 27 16:36:49 BST 2003  Olly Betts <olly@survex.com>

	* getopt.c,getopt.h: Copied getopt tweaks over from xapian-core.

Sat Jul 26 20:04:43 BST 2003  Olly Betts <olly@survex.com>

	* simplesearch.cc: Stem search terms.

Sat Jul 26 19:15:45 BST 2003  Olly Betts <olly@survex.com>

	* simpleindex.cc: Fixed not to run words together between lines.

Sat Jul 26 18:34:28 BST 2003  Olly Betts <olly@survex.com>

	* simpleindex.cc: Create database if it doesn't exist.

Mon Jul 21 01:15:08 BST 2003  Olly Betts <olly@survex.com>

	* configure.in: Use libtool; OM_PATH_XAPIAN -> XO_LIB_XAPIAN.

Sun Jul 20 18:32:20 BST 2003  Olly Betts <olly@survex.com>

	* indexergui/: Removed indexergui directory - it was moved to
	  xapian-application/xapview some time ago.

Thu Jul 17 01:41:14 BST 2003  Olly Betts <olly@survex.com>

	* acinclude.m4: Removed - we no longer need the GTK macros, and should
	  get OM_PATH_XAPIAN from xapian.m4.

Thu Jul 17 00:49:43 BST 2003  Olly Betts <olly@survex.com>
